# hf-articles-chatbot

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: gradio_chatbot.py  pydantic_ai_agent_mcp_client.py  system_prompt.py
